index finalizado, completamente responsive

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     width: 100%;
     margin: 0 auto;
 }
+
 /*Menú de navegación*/
 .nav_menu{
     position: absolute;
@@ -26,32 +27,37 @@
     justify-content: space-between;
     align-items: center;
 }
-@media(max-width:628px){
+@media(max-width:1024px){
     .nav_menu{
+        display: flex;
         flex-direction: column;
         gap: 1.5rem;
         padding: 1rem;
         background: rgb(0,0,0,0.3);
     }
     .items_nav{
+        display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         gap: 1rem;
         width: 100%;
         padding-bottom: 4rem;
     }
     .image_logo img{
-        margin-right: 1.5rem;
+        margin-right: 6rem;
         height: 40px;
     }
     .contenedor_banner{
         width: 100%;
         height: 80vh;
     }
+    .contenedor_banner img{
+        object-fit: cover;
+    }
     .hero_banner{
         width: 100%;
         height: 100%;
-        object-fit: cover;
     }
 }
 /*Lista del menú de navegación*/
@@ -64,27 +70,61 @@
     padding-bottom: 3rem;
     gap: 1.5rem;
 }
-.items_menu{
-    text-decoration: none;
+/*menú de navegación*/
+.nav_menu ul li a{
     color: #000;
+    text-decoration: none;
+}
 
-}
-/*Boton de login*/
-#btn--login{
-    padding: 5px 15px;
-    border-radius: 20px;
-    background-color:#CC8FB7;
+.nav_menu ul li a:hover{
     color: #fff;
-    box-shadow:0 4px 10px rgba(0, 0, 0, 0.8);
 }
-/*Boton de reserva*/
-#btn--reserva{
-    background-color:#AF508F;
-    border-radius: 20px;
+
+/*Boton Login*/
+.nav_menu ul li:nth-child(5) a{
+    padding: 5px 25px;
+    background-color: #BD70A2;
+    border: 1px solid #BD70A2;
+}
+.nav_menu ul li:nth-child(5) a:hover{
+    background-color: #AF508F;
+    border: 1px solid #AF508F;
+    color: #000;
+}
+.nav_menu ul li:nth-child(5) a:active{
+    background-color: #BD70A2;
+    border: 1px solid #BD70A2;
+    color: #fff;
+}
+
+/*Propiedades compartidas por los botones login y reserva*/
+.nav_menu ul li:nth-child(5) a,
+.nav_menu ul li:last-child a{
+    color: #fff;
+    border-radius: 20px ;
+}
+
+/*Boton Reserva*/
+.nav_menu ul li:last-child a{
     padding: 10px 25px;
-    color: #fff;
-    box-shadow:0 4px 10px rgba(0, 0, 0,0.8);
-} 
+    background-color: #AF508F;
+    border: 1px solid #AF508F;
+}
+
+/*Boton reserva hover*/
+.nav_menu ul li:last-child a:hover{
+    color: #000;
+    background-color: #BD70A2;
+    border: 1px solid #BD70A2;
+}
+/*Boton reserva active*/
+.nav_menu ul li:last-child a:active{
+    color: #000;
+    background-color: #AF508F;
+    border: 1px solid #AF508F;
+}
+
+/*Logo de flora spa*/
 .image_logo{
     display: flex;
     flex-direction: column;
@@ -93,6 +133,7 @@
     flex-wrap: wrap;
     padding-left: 5rem;
 }
+/*modificación directa la imagen del logo de flora spa*/
 .image_logo img{
     height: 8rem;
     width: 8rem;
@@ -100,12 +141,14 @@
     object-fit: cover;
     box-shadow: 0 4px 25px rgba(255, 228, 181, 0.8);
 }
+/*Caja contenedora del la imagen de fondo del header*/
 .contenedor_banner{
     width:100%;
     height: 80vh;
     position: relative;
     overflow: hidden;
 }
+/*Dimensiones de la imagen del header*/
 .hero_banner{
     width: 100%;
     height: 100%;
@@ -114,85 +157,96 @@
 }
 
 
-/*-----CSS MAIN INDEX-----*/
+/*--------------------CSS MAIN INDEX-------------------------------------------------------*/
 /*contenedor main acerca de nosotros*/
 
 
 /*contenedor main acerca de nosotros*/
-.main_index{
+.main_index,
+.contenedor_main_index,
+.imagen_equipo_clienta img{
     width: 100%;
+}
+.main_index{
     max-width: 1600px;
     background-color: #efefef;
 }
 .contenedor_main_index{
-    width: 100%;
     max-width: 1200px;
     display: grid;
     grid-template-columns: repeat(2,1fr) 2fr;
-    grid-template-rows: repeat(3,0.5fr);
-    padding-top: 4rem;
+    grid-template-rows: repeat(2,0.5fr);
+    padding-top: 2rem;
+    padding-bottom: 4rem;
     margin: 0 auto;
 }
+/*Dimensiones de la imagen con el cliente*/
 .imagen_equipo_clienta{
     grid-column: 1 / 2;
     grid-row: 1/2;
 }
 .imagen_equipo_clienta img{
-    width: 100%;
     height: 100%;
-    margin-top: 4rem;
-    margin-left: 2rem;
     object-fit: cover;
 }
+/*Dimensiones de la imagen sin el cliente*/
 .imagen_equipo{
     grid-column: 2/3;
     grid-row: 2/3;
     margin-right: 5rem;
 }
+/*Informacion del parrafo de acerca de nosotros y hover*/
 .informacion_equipo_de_trabajo{
     grid-column: 3/4;
     grid-row: 1/4;
     margin-bottom: 4rem;
-    justify-items: start;
-    text-align: center;
+    margin-right: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.subtitulos_index{
-    margin: 0 auto;
+.informacion_equipo_de_trabajo h2{
     padding-bottom: 2rem;
 }
-.parrafo_equipo_de_trabajo{
+.informacion_equipo_de_trabajo p{
     text-align: center;
     line-height: 1.6;
+}
+.informacion_equipo_de_trabajo h2:hover{
+    color: #AF508F;
 }
 .contenedor_main_index div img{
     width: 350px;
     height: 300px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8) ;
 }
-@media (max-width:628px){
+@media (max-width:1200px){
     .contenedor_main_index{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
-        padding-top: 2rem;
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 1rem;
         width: 100%;
         max-width: 100%;
     }
-    .contenedor_main_index div img{
-        justify-items:center;
+    .imagen_equipo,
+    .imagen_equipo_clienta,
+    .informacion_equipo_de_trabajo{
+        grid-column: 1/-1;
+        grid-row: auto;
         align-items: center;
-        padding:0;
-        margin: 0;
-        width: 100%;
-        max-width:100%;
+        margin: 1rem 0;
+        text-align: center;
     }
-    .imagen_equipo{
-        margin: 0 auto;
+    .informacion_equipo_de_trabajo p{
+        text-align: justify;
+        padding: 0 5rem;
+        line-height: 1.4;       
+        font-size: 1rem;
     }
-    .subtitulos_index{
-        margin-top: 4rem;
-        padding:0 0 1rem 0;
+    .contenedor_main_index div img{
+        object-fit: contain;
+        width: 90%;
     }
 }
 /*Segundo contenedor main servicios*/
@@ -214,20 +268,36 @@
     grid-template-columns: 100px repeat(4,1fr) 100px;
     grid-template-rows:  repeat(2,40px) repeat(3,0.5fr);
 }
+/*Ajustes a subtitulo servicios*/
 .div_subtitulos_index{
     grid-column: 1/7 ;
     grid-row: 1/1;
     justify-items: center;
     align-items: center;
 }
+/*modificaciones a los h3 del contenedor y hover*/
+.contenido_servicios_index div a{
+    text-decoration: none;
+    color: #000;
+}
+.contenido_servicios_index div a:hover{
+    color: #AF508F;
+}
+/*Ubicación de manicure*/
 .servicios_manicure_index{
     grid-column: 2/3 ;
     grid-row: 3/4;
 }
+/*Imagenes de los  y propiedades aplicada a las imagenes y boton de más información*/
 .imagen_servicios{
     width: 100%;
     grid-column: 3/5;
     grid-row: 3/4;
+}
+.imagen_servicios img{
+    width: 100%;
+    max-width: 350px;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.8);
 }
 .imagen_servicios,
 .boton_mas_informacion{
@@ -235,6 +305,7 @@
     justify-content: center;
     align-items: center;
 }
+/*Información y ubicación de los otros servicios y estilos, también de manicure*/
 .servicios_manicure_index,
 .servicios_otros_index{
     display: flex;
@@ -244,11 +315,24 @@
     margin: 0;
     padding: 0;
 }
+.servicios_otros_index{
+    grid-column: 3/5;
+    grid-row: 4/5;
+}
+.servicios_otros_index ul {
+    padding: 0 4rem;
+}
+/*Movimiento hacia la derecha de las listas de maicure y otros*/
 .servicios_manicure_index ul li,
 .servicios_otros_index ul li{
     margin-left: 5rem;
 }
 
+/*Información de los servicios de pedicure*/
+.servicios_pedicure_index{
+    grid-column: 5/6;
+    grid-row: 3/4;
+}
 .servicios_pedicure_index{
     display: flex;
     justify-content: start;
@@ -262,28 +346,61 @@
     max-width: 350px;
     box-shadow: 0 4px 7px rgba(0, 0, 0, 0.8);
 }
-.servicios_pedicure_index{
-    grid-column: 5/6;
-    grid-row: 3/4;
-}
-.servicios_otros_index{
-    grid-column: 3/5;
-    grid-row: 4/5;
-}
+
+/*Boton más información ubicación en el grid y estilo*/
 .boton_mas_informacion{
     grid-column:3/5 ;
     grid-row: 5/6 ;
 }
-.btn--mas_informacion{
-    text-decoration: none;
+.contenido_servicios_index a.btn--mas_informacion{
     color: #fff;
     padding: 15px 70px;
     border-radius: 10px;
-    background-color: #A0522D;
+    background-color: #BD70A2;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.8);
 }
+.contenido_servicios_index a.btn--mas_informacion:hover{
+    color: #000;
+    background-color: #AF508F;
+}
+
+
+
+/*media queres de servicios/ segundo contenedor*/
+@media(max-width:1200px){
+    .contenido_servicios_index{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        width: 100%;
+    }
+    .div_subtitulos_index,
+    .servicios_manicure_index,
+    .servicios_pedicure_index,
+    .imagen_servicios,
+    .servicios_otros_index,
+    .boton_mas_informacion {
+        width: 100%;
+        max-width: 500px;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+    .servicios_otros_index{
+        padding: 0 2rem;
+    }
+    .boton_mas_informacion{
+    padding: 2rem;
+    }
+    .btn--mas_informacion{
+        margin-left: 2.5rem;
+    }
+}
+
 /*-------------------------Inicio footer----------------*/
 .footer_index{
-    background-color: #DBDBDB;
     border-top: 1px solid #000;
     width: 100%;
     max-width: 1600px;
@@ -291,7 +408,9 @@
     justify-content: center;
     align-items: center;
     font-size:0.8rem;
+    background-color: #E9CEDF;
 }
+/*contenedor footer, medidas, grid y hover*/
 .contenedor_footer_index{
     display: grid;
     grid-template-columns: repeat(4,1fr) auto;
@@ -299,23 +418,34 @@
     width: 100%;
     max-width: 1200px;
 }
+.contenedor_footer_index div a:hover{
+    color: #AF508F;
+}
+.contenedor_footer_index div h4:hover{
+    color: #AF508F;
+}
+/*Parrafo footer medidas, grid y posición*/
 .informacion_footer{
     grid-column: 1/2;
     grid-row: 1/2;
 }
+/*logo footer*/
 .informacion_footer img{
     width: 20px;
     height: 20px;
     border-radius: 30px;
 }
+/*Grid contactos footer*/
 .contactos_footer{
     grid-column: 3/4;
     grid-row: 1/2;
 }
+/*Grid redes sociales footer*/
 .redes_sociales_footer{
     grid-column: 4/5;
     grid-row: 1/2;
 }
+/*Posicion dentro del footer con grid redes sociales y contactos*/
 .redes_sociales_footer,
 .contactos_footer{
     display: flex;
@@ -323,11 +453,12 @@
     justify-content: end;
     align-items: start;
 }
+/*posicion de los titulos de contactos y redes sociales.
+Estilos a los enlaces*/
 .contactos_footer h4,
 .redes_sociales_footer h4{
     padding-bottom: 0.5rem;
 }
-
 .contactos_footer ul li a,
 .redes_sociales_footer ul li a{
     list-style: none;
@@ -336,11 +467,13 @@
     color: #000;
     
 }
+/*Estilo a las listas*/
 .contactos_footer ul li,
 .redes_sociales_footer ul li{
     list-style: none;
     padding: 1px 0;
 }
+/*copyrigth posición y estilos*/
 .copyright_footer{
     grid-column: 1/6;
     grid-row: 2/3;
@@ -351,6 +484,43 @@
 }
 .copy{
     padding-right: 3rem;
+}
+
+/*media queres del footer*/
+@media(max-width:1200px){
+    .contenedor_footer_index{
+        display:grid;
+        grid-template-columns:repeat(3,0.5fr);
+        grid-template-rows: repeat(2, auto);
+    }
+    .informacion_footer{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+    }
+    .contactos_footer{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+    }
+    .redes_sociales_footer{
+        grid-column: 3/4;
+        grid-row: 1/2;
+        justify-content: center;
+        align-items: center;
+    }
+    .copyright_footer{
+        grid-column: 1/4;
+        grid-row: 2/3;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 1rem;
+        border-top:1px solid #AF508F ;
+    }
 }
 
 
@@ -388,6 +558,15 @@
     margin-top: 0.2rem;
     margin-left: 7rem;
 }
+.items_servicios{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 2rem;
+    align-items: center;
+    list-style: none;
+    padding-bottom: 3rem;
+    gap: 1.5rem;
+}
 .items_menu_servicios{
     display: flex;
     justify-content: center;
@@ -396,17 +575,39 @@
     margin-top: 1rem;
     color: #000;
 }
-#btn--login-servicios{
+/*Botonoes login y reserva servicios*/
+.nav_menu_servicios ul li:nth-child(5) a,
+.nav_menu_servicios ul li:last-child a{
     color: #fff;
-    background-color: #CC8FB7;
     margin-left: 1.5rem;
-    padding: 8px 20px;
-    border-radius: 15px;
 }
-#btn--reserva-servicios{
-    color: #fff;
+.nav_menu_servicios ul li:nth-child(5) a {
+    background-color: #CC8FB7;
+    padding: 8px 20px;
+    border-radius: 25px;
+}
+.nav_menu_servicios ul li:last-child a{
     background-color: #AF508F;
     padding: 15px 25px;
-    margin-left: 1.5rem;
     border-radius: 20px;
+}
+
+/*pseudoclases botonos*/
+
+/*menú de navegación*/
+.nav_menu_servicios ul .opciones_menu a:hover{
+
+    transform: scale(1.1);
+}
+/*login y reserva*/
+.nav_menu_servicios ul li:nth-child(5) a:hover,
+.nav_menu_servicios ul li:last-child a:hover{
+    color: #000;
+    transform: scale(1.1);
+}
+.nav_menu_servicios ul li:nth-child(5) a:hover:active{
+    background-color:#BD70A2;
+}
+.nav_menu_servicios ul li:last-child a:hover:active{
+    background-color: #70335B;
 }
